--- a/assets/_scss/colors/light-colors.scss
+++ b/assets/_scss/colors/light-colors.scss
@@ -21,7 +21,7 @@ $anchor-text-color-light: #206EBC;
 %body-main-styles-colors-light {
   --body-anchor-text-color: #{$anchor-text-color-light};
   --body-anchor-hover-text-color: #2f6597;
-  --body-text-color: #6a6a6a;
+  --body-text-color: #222222;
   --body-header-text-color: #{$header-color-light};
   --body-background-color: #{$main-background-light};
   --body-hr-color: #{$hr-color-light};
