--- a/assets/_scss/projects/project-container.scss
+++ b/assets/_scss/projects/project-container.scss
@@ -1,6 +1,7 @@
 /* Mr. Green Jekyll Theme (https://github.com/MrGreensWorkshop/MrGreen-JekyllTheme)
  * Copyright (c) 2022 Mr. Green's Workshop https://www.MrGreensWorkshop.com
  * Licensed under MIT
+ * 241216 Dima - Tuned layout
 */
 
 .project-heading-container {
@@ -52,7 +53,9 @@
   object-fit: cover;
 }
 
+/* Project title */
 .project-container .project-header > h1 {
+/*  font-size: 2.0rem;  */
   margin-top: 10px;
 }
 
